Mejora de responsividad y espaciado en las tarjetas

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -155,9 +155,8 @@
         </div>
         {{/each}}
         {{#iflogico estado '!=' 2}}
-            <div class="col-md-3 col-3 col-xl-2 col-lg-2 col-sm-3 p-1">
-                <div class="card" style="height:28rem; ">
-                    <div class="card-body justify-content-center align-center">
+            <div class="card" style="height:28rem; width: 18rem; margin-right: 5px">
+                <div class="card-body justify-content-center align-center">
 
                     <div class="row text-center align-items-center">
                         <h5 class="card-title">Agregar nuevo grupo</h5>
