--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -6,20 +6,20 @@
 
     .extra-bold {
         font-weight: 800;
-        font-size: 13px;
+        font-size: 0.83em;
     }
 
     .regular p {
         font-weight: 400;
-        font-size: 12px;
+        font-size: 0.75em;
     }
     .medium p{
         font-weight: 500;
-        font-size: 10px;
+        font-size: 0.66em;
     }
     .extra-light p{
         font-weight: 200;
-        font-size: 10pt;
+        font-size: 0.83em;
     }
     #page-container {
         position: relative;
@@ -33,15 +33,14 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 60px;
-        line-height: 60px
-    }
 
     @media print {
+
+
         body{
             width: 21.59cm;
             height: 27.94cm;
-            margin: 0.42cm 2cm 2cm 2.5cm;
+            margin: 0.42cm 2cm 2cm 1.5cm;
         }
     }
 </style>
@@ -53,7 +52,7 @@
                     <img style="width: 100%; height: auto;" src="/img/encabezado-left.png" alt="Encabezado">
                 </figure>
                 <figure class="col">
-                    <img style="width: 120%; height: auto;" src="/img/encabezado-right.png" alt="Encabezado">
+                    <img style="width: 100%; height: auto;" src="/img/encabezado-right.png" alt="Encabezado">
                 </figure>
             </div>
             </figure>
@@ -99,7 +98,7 @@
                 </div>
             </div>
 
-            <div class="row-cols-1 montserrat">
+            <div class="row-cols-1 montserrat" style="padding-top: 100px">
                 <section class="extra-bold">
                     <br><br>
                     <p>_______________________________________</p>
