--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -76,6 +76,10 @@
                 </div>
             </div>
         </div>
+        <div class="row m-2">
+            <p>Las graficas de segunda oportunidad cambiaran una vez que se registren calificaciones de esta misma.
+            Por lo tanto pueden ser iguales a las de primera oportunidad en el periodo de primera oportunidad.</p>
+        </div>
     </main>
 </div>
 <script>
