--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -15,27 +15,28 @@
 <div class="row">
     <!-- Generación de un card por tema -->
     {{#each tema}}
-        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3">
-            <div class="card" style="height:18rem;">
-                <div class="card-header d-flex flex-row-reverse">
-                    <a class="bi bi-trash-fill " align="right"  data-toggle="modal"
-                       data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
-                    <a class="bi bi-pencil-square " align="right" data-toggle="modal"
-                       data-target="#editarTemaModal{{dataValues.id}}" title="Editar el tema."></a>
-                </div>
-                <div class="card-body">
-                    <p><strong>{{dataValues.numerotema}}. {{dataValues.nombre}}</strong></p>
-                </div>
-                <div class="card-footer">
-                    <a href="/grupo/actividades/{{dataValues.idgrupo}}" class="btn btn-primary">Actividades</a>
-                    <a href="/grupo/calificaciones/{{dataValues.idgrupo}}/{{dataValues.id}}" class="btn btn-primary">Calificaciones</a>
-                </div>
+        <div class="card" style="height:18rem; width: 18rem;  margin-bottom: 5px; margin-right: 5px">
+            <div class="card-header d-flex flex-row-reverse">
+                <a class="bi bi-trash-fill " align="right" data-toggle="modal"
+                   data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
+                <a class="bi bi-pencil-square " align="right" data-toggle="modal"
+                   data-target="#editarTemaModal{{dataValues.id}}" title="Editar el tema."></a>
+            </div>
+            <div class="card-body">
+                <p><strong>{{dataValues.numerotema}}. {{dataValues.nombre}}</strong></p>
+            </div>
+            <div class="card-footer">
+                <a href="/grupo/actividades/{{dataValues.idgrupo}}" class="btn btn-primary">Actividades</a>
+                <a href="/grupo/calificaciones/{{dataValues.idgrupo}}/{{dataValues.id}}" class="btn btn-primary">Calificaciones</a>
             </div>
         </div>
+
         <!--Modal de edición -->
-        <form action="/tema/editar-tema/{{dataValues.idgrupo}}/{{dataValues.id}}?_method=PUT" method="POST" class="needs-validation">
+        <form action="/tema/editar-tema/{{dataValues.idgrupo}}/{{dataValues.id}}?_method=PUT" method="POST"
+              class="needs-validation">
             <input type="hidden" name="_method" value="PUT">
-            <div class="modal fade" id="editarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="editarTemaModal{{dataValues.id}}"
+            <div class="modal fade" id="editarTemaModal{{dataValues.id}}" tabindex="-1"
+                 aria-labelledby="editarTemaModal{{dataValues.id}}"
                  aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -48,7 +49,7 @@
                         <div class="modal-body">
                             <form>
                                 <div class="form-group">
-                                    <label for="unidad" class="col-form-label" >Unidad:</label>
+                                    <label for="unidad" class="col-form-label">Unidad:</label>
                                     <input type="number" min="1" class="form-control" id="unidad" name="unidad"
                                            value="{{dataValues.numerotema}}" required>
                                 </div>
@@ -71,7 +72,8 @@
         <form action="/tema/eliminar-tema/{{../idgrupo}}/{{dataValues.id}}?_method=DELETE" method="POST">
             <input type="hidden" name="_method" value="DELETE">
             <!--Modal de eliminación -->
-            <div class="modal fade" id="eliminarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="eliminarTemaModal{{dataValues.id}}"
+            <div class="modal fade" id="eliminarTemaModal{{dataValues.id}}" tabindex="-1"
+                 aria-labelledby="eliminarTemaModal{{dataValues.id}}"
                  aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -98,7 +100,7 @@
         <!-- En caso de que no existan temas se despliega un card con un mensaje -->
     {{else}}
         <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
-            <div class="card" style="height:18rem;">
+            <div class="card" style="height:18rem; width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">No hay temas existentes en este grupo.</h5>
                     <p class="card-text">Agregue un tema.</p>
@@ -107,25 +109,27 @@
         </div>
     {{/each}}
 
-    <!-- Card fija para la creación de un grupo -->
-    <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3">
-        <div class="card" style="height:14rem;">
-            <div class="card-body justify-content-center align-center">
-                <div class="row justify-content-center align-items-center">
-                    <h5 class="card-title">Nuevo tema</h5>
-                </div>
-                <div class="row justify-content-md-center align-items-center">
-                    <a class="btn btn-success" href="/tema/nuevo-tema/{{idgrupo}}" title="Agregar un tema de forma manual.">Agregar tema</a>
-                </div>
-                <div class="row justify-content-md-center align-items-center">
-                    ó
-                </div>
-                <div class="row justify-content-md-center align-items-center">
-                    <a class="btn btn-primary" title="Importar temas desde un archivo." data-toggle="modal" data-target="#cargarExcel">Importar tema(s)</a>
-                </div>
+    <!-- Card fija para la creación detema -->
+
+    <div class="card" style="height:14rem; width: 18rem; margin-bottom: 5px; margin-right: 5px">
+        <div class="card-body justify-content-center align-center">
+            <div class="row justify-content-center align-items-center">
+                <h5 class="card-title">Nuevo tema</h5>
+            </div>
+            <div class="row justify-content-md-center align-items-center">
+                <a class="btn btn-success" href="/tema/nuevo-tema/{{idgrupo}}" title="Agregar un tema de forma manual.">Agregar
+                    tema</a>
+            </div>
+            <div class="row justify-content-md-center align-items-center">
+                ó
+            </div>
+            <div class="row justify-content-md-center align-items-center">
+                <a class="btn btn-primary" title="Importar temas desde un archivo." data-toggle="modal"
+                   data-target="#cargarExcel">Importar tema(s)</a>
             </div>
         </div>
     </div>
+
 </div>
 
 <!-- modals -->
@@ -141,7 +145,8 @@
                 </div>
                 <div class="modal-body">
                     <p style="text-align:justify;">
-                        Asegúrese de que el archivo a importar ha sido descargado directamente del sistema búho, este no debe contener
+                        Asegúrese de que el archivo a importar ha sido descargado directamente del sistema búho, este no
+                        debe contener
                         ninguna modificación previa y debe contar con la extensión o terminación .asp
                     </p>
                     <div class="input-group mb-3">
@@ -149,7 +154,8 @@
                             <span class="input-group-text" id="inputGroupFileAddon">Selección</span>
                         </div>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" name="archivo" id="archivo" aria-describedby="inputGroupFileAddon" accept=".asp, .html">
+                            <input type="file" class="custom-file-input" name="archivo" id="archivo"
+                                   aria-describedby="inputGroupFileAddon" accept=".asp, .html">
                             <label class="custom-file-label" for="inputGroupFile" data-browse="Buscar">Archivo</label>
                         </div>
                     </div>
