Añadido icono de estado

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <div class="row m-2">
         <h2 class="display-5">Mis grupos {{#iflogico estado '===' "1"}}activos{{/iflogico}}
             {{#iflogico estado '===' "2"}}en papelera{{/iflogico}}
-            {{#iflogico estado '===' "0"}}inactivos{{/iflogico}}</h2>
+            {{#iflogico estado '===' "0"}}completados{{/iflogico}}</h2>
     </div>
     <div class="row m-2">
     {{#each grupos}}
