--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -43,7 +43,7 @@
                 <label for="estado" class="form-label">Estado</label>
                 <select class="form-select custom-select" id="estado" name="estado" required>
                     <option value=1>Activo</option>
-                    <option value=0>Inactivo</option>
+                    <option value=0>Completado</option>
                 </select>
             </div>
             <div class="col">
