--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -29,7 +29,6 @@
         </div>
         <div class="row">
             <div class="col-4 col-md-5 col-xl-3 col-sm-4 col-lg-3">
-
                 <div class="card" style="width: 100%;height: 385px">
                     <input type="hidden" id="indiceReprobacionData" value="{{dataReprobacion}}">
                     <div class="card-body" style="overflow: hidden;">
@@ -40,7 +39,7 @@
                 </div>
             </div>
             <div class="col col-md col-xl col-sm col-lg">
-                <div class="card " style="width: 90%; height: 385px">
+                <div class="card " style="width: 90%; height: 385px;">
                     <input type="hidden" id="actividadesReprobacionData" value="{{dataReprobacionAct}}">
                     <div class="card-body">
                         <h5 class="card-title text-center">Rendimiento del grupo por {{#if title}}tema
