Agregada columna extra, para visualizar calificaciones, si se promedian actividades agrupada por categoria

--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -36,7 +36,7 @@
                         <th data-field="nombre" data-sorteable="false" class="column">Nombre</th>
 
                         {{#each actividades}}
-                            <th data-field="calificaciones.{{@index}}" class="column"><a href="/grupo/actividades/{{../idgrupo}}/{{../tema.dataValues.id}}/{{dataValues.id}}">{{dataValues.nombre}}
+                            <th data-field="calificaciones.{{@index}}" class="column"><a  {{#iflogico dataValues.id '!==' 'n'}}href="/grupo/actividades/{{../idgrupo}}/{{../tema.dataValues.id}}/{{dataValues.id}}"{{/iflogico}}>{{dataValues.nombre}}
                                 : {{dataValues.valor}}</a></th>
                         {{/each}}
                         <th data-field="califinal" class="column">Calif. Final</th>
