Validacion para evitar que el valor de las actividades sobrepase de 100

--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -20,11 +20,11 @@
                         <div class="col-4">
                             <label for="numerotema" class="form-label">Unidad</label>
                             <input type="number" min="1" step="1" class="form-control" value="1" name="numerotema"
-                                   id="numerotema" required>
+                                   id="numerotema" required value={{numerotema}}>
                         </div>
                         <div class="col">
                             <label for="nombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" name="nombre" id="nombre" required>
+                            <input type="text" class="form-control" name="nombre" id="nombre" required value={{nombre}}>
                         </div>
                     </div>
                 </div>
