Validacion para evitar que el valor de las actividades sobrepase de 100

--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -95,7 +95,7 @@
                                 <label for="descripcion">Descripción</label>
                                 <textarea type="text" class="form-control"
                                           disabled id="descripcion"
-                                          name="descripcion" required>{{actividad.dataValues.descripcion}}</textarea>
+                                          name="descripcion" >{{actividad.dataValues.descripcion}}</textarea>
                             </div>
                         </div>
                         <!-- Modal para verificar la edición-->
