Cambio de valores enteros a double

--- a/views/actividad/actividad-nuevo.hbs
+++ b/views/actividad/actividad-nuevo.hbs
@@ -19,7 +19,7 @@
         </div>
         <div class="col">
             <label for="valorBox" class="form-label">Valor</label>
-            <input type="number" min="1" max="100" step="1" class="form-control" value="1" name="valorBox" id="valorBox"
+            <input type="number" min="1" max="100" step="any" class="form-control" value="1" name="valorBox" id="valorBox"
                    required>
         </div>
         <div class="col">
