--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-4">
                             <label for="numerotema" class="form-label">Unidad</label>
-                            <input type="number" min="1" step="1" class="form-control" value="1" name="numerotema"
+                            <input type="number" min="1" step="any" class="form-control" value="1" name="numerotema"
                                    id="numerotema" required value={{numerotema}}>
                         </div>
                         <div class="col">
