--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -67,7 +67,7 @@
                                 <div class="col">
                                     <label for="valor">Valor</label>
                                     <input type="number" min="1" max="100" class="form-control" id="valor"
-                                           name="valor"
+                                           name="valor" step="any"
                                            disabled value="{{actividad.dataValues.valor}}" required>
                                 </div>
                                 <div class="col">
