--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -64,7 +64,7 @@
     <ul class="navbar-nav">
 
         <li class="nav-item">
-            <a class="nav-link bi bi-house-fill" href="/" title="Inicio"></a>
+            <a class="nav-link bi bi-house-fill" href="/filtro/1" title="Inicio"></a>
         </li>
         <li class="nav-item" >
             <div class="dropdown">
