--- a/views/equipo/seleccion-equipo.hbs
+++ b/views/equipo/seleccion-equipo.hbs
@@ -34,7 +34,7 @@
             <a class="btn btn-primary" type="button" id="siguiente">
                 Siguiente
             </a>
-            <a class="btn btn-danger" href="/grupo/actividades/{{idgrupo}}">Cancelar</a>
+            <a class="btn btn-danger" href="/grupo/actividades/{{idgrupo}}">Salir</a>
         </div>
     </div>
 </main>
