--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -73,7 +73,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="/generar-reporte">Generar reporte parcial</a>
-                    <a class="dropdown-item" href="/">Regresar a mi grupos</a>
+                    <a class="dropdown-item" href="/filtro/1">Regresar a mi grupos</a>
                     <a class="dropdown-item" href="#">Salir</a>
                 </div>
             </div>
