Redirección de / a /filtro/1 para mostrar grupos activos.

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -6,7 +6,7 @@
         <p>Comunique el siguiente error detallando que es lo que estaba realizando para darle seguimiento:   </p>
         <p>{{error}}</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="/" role="button">Regresar al inicio</a>
+            <a class="btn btn-primary btn-lg" href="/filtro/1" role="button">Regresar al inicio</a>
         </p>
     </div>
 </div>
