--- a/views/grupo/datos-grupo-editar.hbs
+++ b/views/grupo/datos-grupo-editar.hbs
@@ -103,7 +103,7 @@
         <div class="row ">
             <div class="col d-flex flex-row-reverse p-2 m-2">
                 <button class="btn btn-primary" type="submit">Guardar</button>
-                <a class="btn btn-danger align-right" href="/" role="button">Cancelar</a>
+                <a class="btn btn-danger align-right" href="/filtro/1" role="button">Cancelar</a>
             </div>
         </div>
     </form>
