--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -67,7 +67,7 @@
                 <a class="btn btn-outline-primary" href="/grupo/crear-grupo">
                     Limpiar
                 </a>
-                <a class="btn btn-danger align-right" href="/" role="button">Cancelar</a>
+                <a class="btn btn-danger align-right" href="/filtro/1" role="button">Cancelar</a>
             </div>
         </div>
     </form>
