--- a/views/grupo/inicio-wizard.hbs
+++ b/views/grupo/inicio-wizard.hbs
@@ -40,7 +40,7 @@
                 </button>
                 <a class="btn btn-primary btn-lg" href="/grupo/crear-grupo" role="button">Crear
                     Manualmente</a>
-                <a class="btn btn-danger btn-lg align-right" href="/" role="button">Cancelar</a>
+                <a class="btn btn-danger btn-lg align-right" href="/filtro/1" role="button">Cancelar</a>
             </p>
         </div>
         <!-- Modal para cargar archivo-->
