--- a/views/reporte/formulario-reporte-desercion.hbs
+++ b/views/reporte/formulario-reporte-desercion.hbs
@@ -88,7 +88,7 @@
             <button type="submit" class="btn btn-primary" id="siguiente">
                 Siguiente
             </button>
-            <a class="btn btn-danger" href="/">Cancelar</a>
+            <a class="btn btn-danger" href="/filtro/1">Cancelar</a>
         </div>
     </form>
 </div>
