--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -132,7 +132,7 @@
 
             <div class="row-cols-1">
                 <button id='current' class="btn btn-primary no-print" onclick="print_current_page()">Imprimir</button>
-                <a class="btn btn-secondary no-print" href="/">Salir</a>
+                <a class="btn btn-secondary no-print" href="/filtro/1">Salir</a>
             </div>
         </div>
         <footer class="d-print- footer" style="height: 1.2cm; padding-top: 30px">
