--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -18,10 +18,11 @@
         <h3 class="display-5">Agregar alumnos</h3>
     </div>
     <!-- Datos del alumno -->
-    <div class="row m-2">
-        <div class="col input-group">
+    <div class="row m-0">
+        <div class="col">
             <input class="form-control" type="text" placeholder="No. Control" id="ClaveBox" name="ClaveBox"
                    aria-label="Clave">
+            <label for="ClaveBox">Clave</label>
         </div>
         <div class="col input-group">
             <input class="form-control" type="text" placeholder="Apellidos y Nombre(s)" id="NombreBox" name="NombreBox"
