--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/cssc/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="/js/bootstrap4-editable/css/bootstrap-editable.css" type="text/css">
