--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -15,7 +15,7 @@
     {{/each}}
     <!-- Cuerpo del archivo -->
     <div class="row m-2 p-2">
-        <h3 class="display-5">Agregar alumnos</h3>
+        <h3 class="display-4"><strong>Agregar alumnos</strong></h3>
     </div>
     <!-- Datos del alumno -->
     <div class="row m-0">
