--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -59,7 +59,7 @@
 
 <body>
 
-<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar no-print sticky-top" id="navbar" style="background: #131418; width: 100vw;">
+<header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar no-print sticky-top" id="navbar" style="background: #131418; width: 100vw;">
 
     <ul class="navbar-nav">
 
