--- a/views/grupo/datos-grupo-editar.hbs
+++ b/views/grupo/datos-grupo-editar.hbs
@@ -35,18 +35,21 @@
             </div>
             <div class="col">
                 <label for="periodo" class="form-label">Periodo</label>
-                <input type="text" class="form-control" name="periodo" id="periodo" placeholder="Ej. ENE-JUN-2021" value="{{grupo.dataValues.periodo}}" required>
+                <input type="text" class="form-control" name="periodo" id="periodo" placeholder="Ej. ENE-JUN-2021"
+                       value="{{grupo.dataValues.periodo}}" required>
             </div>
             <div class="col">
                 <label for="estado" class="form-label">Estado</label>
                 <select class="form-select custom-select" id="estado" name="estado" required>
                     <option value=1 {{#iflogico grupo.dataValues.estado '==' "1"}}selected{{/iflogico}}>Activo</option>
-                    <option value=0 {{#iflogico grupo.dataValues.estado '==' "0"}}selected{{/iflogico}}>Completado</option>
+                    <option value=0 {{#iflogico grupo.dataValues.estado '==' "0"}}selected{{/iflogico}}>Completado
+                    </option>
                 </select>
             </div>
             <div class="col">
                 <label for="estado" class="form-label">Imagen</label>
-                <select class="form-select custom-select" id="imagen" name="imagen" value="{{grupo.dataValues.img}}" required>
+                <select class="form-select custom-select" id="imagen" name="imagen" value="{{grupo.dataValues.img}}"
+                        required>
                     <option value=0>Calculadora</option>
                     <option value=1>Código</option>
                     <option value=2>Laboratorio</option>
@@ -67,7 +70,8 @@
                        aria-label="Clave">
             </div>
             <div class="col input-group">
-                <input class="form-control" type="text" placeholder="Apellidos y Nombre(s)" id="NombreBox" name="NombreBox"
+                <input class="form-control" type="text" placeholder="Apellidos y Nombre(s)" id="NombreBox"
+                       name="NombreBox"
                        aria-label="Nombre(s)">
             </div>
         </div>
